// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.proto;

option go_package = "infra/unifiedfleet/api/v1/proto;ufspb";

import "google/protobuf/timestamp.proto";
import "go.chromium.org/luci/grpc/proto/google/api/resource.proto";
import "go.chromium.org/luci/grpc/proto/google/api/field_behavior.proto";
import "infra/unifiedfleet/api/v1/proto/location.proto";

// Rack refers to the racks which are placed in
// Chrome Browser lab and Chrome OS lab. Machines and Pheripherals
// are placed in the Racks.
message Rack {
    option (google.api.resource) = {
        type: "unified-fleet-system.appspot.com/Rack"
        pattern: "racks/{rack}"
    };
   // Unique (fake probably) asset tag
   // The format will be racks/XXX
   string name = 1;
   Location location = 2;
   // Indicates the Rack Unit capacity of the rack.
   int32 capacity_ru = 3;
   oneof rack {
       ChromeBrowserRack chrome_browser_rack = 4;
       ChromeOSRack chromeos_rack = 5;
   };
    // Record the last update timestamp of this Rack (In UTC timezone)
    google.protobuf.Timestamp update_time = 6 [
            (google.api.field_behavior) = OUTPUT_ONLY];
   // Record the ACL info of the rack
   string realm = 7;
}

// ChromeBrowserRack refers to the rack in Chrome Browser lab
//
// TODO: the below rack info should be removed as they belong to rack LSE.
// Changes needed:
// validateRackLSE - controller/rack_lse.go
// validateRack - controller/rack.go
// validateDeleteSwitch - controller/switch.go
// validateDeleteRPM - controller/rpm.go
// validateDeleteKVM - controller/kvm.go
// newRackEntity - model/registration/rack.go
// newRackLSEEntity - model/inventory/rack_lse.go
message ChromeBrowserRack {
    // RPMs in the rack
    repeated string rpms = 1 [(google.api.resource_reference) = {
        type: "unified-fleet-system.appspot.com/RPM"
    }];
    // KVMs in the rack
    repeated string kvms = 2 [(google.api.resource_reference) = {
        type: "unified-fleet-system.appspot.com/KVM"
    }];
    // Switches in the rack
    repeated string switches = 3 [(google.api.resource_reference) = {
        type: "unified-fleet-system.appspot.com/Switch"
    }];
}

// ChromeOSRack refers to the rack in Chrome Browser lab
message ChromeOSRack {
}